--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,12 +20,14 @@ jobs:
           curl -sL https://raw.githubusercontent.com/apple/swift-mmio/refs/heads/main/.swift-format -o .swift-format-mmio
           diff .swift-format .swift-format-mmio
 
-  tests:
-    name: Test
-    uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
-    with:
-      windows_exclude_swift_versions: "[{\"swift_version\": \"5.9\"}]"
-      enable_macos_checks: true
+#  tests:
+#    name: Test
+#    uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
+#    with:
+#      macos_exclude_xcode_versions: "[{\"xcode_version\": \"16.0\"}, {\"xcode_version\": \"16.1\"}, {\"xcode_version\": \"16.2\"}, {\"xcode_version\": \"16.3\"}]"
+#      linux_exclude_swift_versions: "[{\"swift_version\": \"5.9\"}, {\"swift_version\": \"5.10\"}, {\"swift_version\": \"6.0\"}, {\"swift_version\": \"6.1\"}, {\"swift_version\": \"nightly-main\"}, {\"swift_version\": \"nightly-6.1\"}, {\"swift_version\": \"nightly-6.2\"}]"
+#      windows_exclude_swift_versions: "[{\"swift_version\": \"5.9\"}, {\"swift_version\": \"6.0\"}, {\"swift_version\": \"6.1\"}, {\"swift_version\": \"nightly\"}, {\"swift_version\": \"nightly-6.1\"}]"
+#      enable_macos_checks: true
 
   soundness:
     name: Soundness
@@ -34,3 +36,6 @@ jobs:
       format_check_enabled: false # bug: https://github.com/swiftlang/swift-format/issues/1028
       shell_check_enabled: false
       yamllint_check_enabled: false
+      api_breakage_check_enabled: false
+      docs_check_enabled: false
+      
