--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -34,9 +34,8 @@ jobs:
     name: Soundness
     uses: swiftlang/github-workflows/.github/workflows/soundness.yml@main
     with:
-      format_check_enabled: false # bug: https://github.com/swiftlang/swift-format/issues/1028
-      shell_check_enabled: false
-      yamllint_check_enabled: false
+      format_check_enabled: false  # bug: https://github.com/swiftlang/swift-format/issues/1028
+      shell_check_enabled: true
+      yamllint_check_enabled: true
       api_breakage_check_enabled: false
-      docs_check_enabled: false
-      
+      docs_check_enabled: false  # doc check runs using 6.0.3 compiler
