--- a/.spi.yml
+++ b/.spi.yml
@@ -1,4 +1,3 @@
 version: 1
-builder:
-  configs:
-    - documentation_targets: [BinaryParsing]
+external_links:
+  documentation: "https://apple.github.io/swift-binary-parsing/documentation/binaryparsing/"
