--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -34,8 +34,11 @@ jobs:
     name: Soundness
     uses: swiftlang/github-workflows/.github/workflows/soundness.yml@main
     with:
-      format_check_enabled: false  # bug: https://github.com/swiftlang/swift-format/issues/1028
+      format_check_enabled: true
+      format_check_container_image: swiftlang/swift:nightly-6.2-jammy
       shell_check_enabled: true
       yamllint_check_enabled: true
-      api_breakage_check_enabled: false
-      docs_check_enabled: false  # doc check runs using 6.0.3 compiler
+      api_breakage_check_enabled: true
+      api_breakage_check_container_image: swiftlang/swift:nightly-6.2-jammy
+      docs_check_enabled: false  # nightly container has issues installing yq
+      docs_check_container_image: swiftlang/swift:nightly-6.2-jammy
